src/test/deca/context/invalid/provided/test_condition_if.deca
//Resultats :
//Erreur contextuelle
//Ligne 6 : Condition does not return a boolean

{
    int x = 1 ;
    if (x) {
        println("samatchi");
    }
}